testsuite/tests/properties/invalid_prop_def/reserved.lkt
import common

class BarNode: FooNode {
    @export fun prop(node: Int, lex_env: Int): Int = node + lex_env
}
